Changes and Bugs fixed during the different Releases
====================================================

Release 3.X (Not scheduled yet)
===================================

* A Bug in the UML2 Metamodel has been fixed.
  - Class diagrams using stereotypes are now adapted correctly.
  
* Some bugs of the OCL Parser / Editor have been fixed.
  - Derive and Init constraints defined for static properties are now parsed correctly.
  - The escape underscore for reserved words can now be used.
  - The ASM of nested LetExpressions now has the right order.
  - OclAny.asSet() is now parsed correctly either if used implicitly or explicitly.
  
* Improvements on Ocl2Java
  - Generated aspects are named according to their constraints.
  - Statically defined operations and properties are now instrumented correctly.
  - No new super classes are generated for definitions, initial and derived values are
    introduced anymore.
  - Definitions, Initial and Derived values should now work correctly if fields are 
    accessed directly from other classes.
  - Type Literals are now transformed correctly in all known contexts.
  - InvalidLiterals should now be transformed correctly in all known contexts.
  - Generic types in LetExpressions are now transformed correctly.
  - Nested IterateExpressions using the same names for iterator variables are now
    handled correctly.
  - Nested IteratorExpressions using the same names for iterator variables are now
    handled correctly.
  - OclAny.asSet() is now transformed correctly.
  - OclAny.oclIsUndefined() now works on Java primitive types as well.
  - IsUnique() iterators are now transformed correctly if their body expression result
    in another type than the collection's element type.
  - The patterns <CONSTRAINT_NAME>, <CONSTAINTS_BODY>, and <OBJECT_IN_ILLEGAL_STATE>
    can now be used to parameterize error messages in violation macros constraint 
    specific.

* Changes on Ocl2SQL